--- a/docs/phen_framing.tex
+++ b/docs/phen_framing.tex
@@ -94,11 +94,12 @@ Here, using rarely available plant-level phenology from a common garden of 13 wo
 \clearpage
 %\section{Introduction}
 Terrestrial forests are a major mitigation pathway for climate change, sequestering 20\% of greenhouse gas emissions   \citep{roe2021}. Most models of climate change assume warming will drive longer seasons, more tree growth and, thus, more carbon storage (Figure \ref{fig:cool1}a), following decades of evidence from ecosystem-scale studies \citep{White1999,Keenan2014}. 
-However, recent findings from  observations of individual trees have questioned this assumption \citep{dow2022warm,silvestro2023longer}. At the same time new experiments on saplings have suggested that plants may adjust their end of season timing dynamically such that longer seasons do not increase total productivity (Figure \ref{fig:cool1}b), though the mechanism---and prevalence---of this effect is unclear \citep{Zani2020,Norby2021,Zohner2023},
+However, recent findings from  observations of individual trees have questioned this assumption \citep{dow2022warm,silvestro2023longer}. At the same time new experiments on saplings have suggested that plants may adjust their end of season timing dynamically such that longer seasons do not increase total productivity (Figure \ref{fig:cool1}b), though the mechanism---and prevalence---of this effect is unclear \citep{Zani2020,Norby2021,Zohner2023}.
 % CUTREFS: You only need one of {shanley2024, roe2021} and 1-2 of {Churkina2005,White1999,Keenan2014} ... I cut some. 
 % CUTREFS: camarero2022decoupled
 
-These results suggest fundamental gaps in our understanding of how early-season events and the environment of the growing season shape end-of-season events, but addressing these gaps requires working across plant strategies and varying definitions of a growing season. Because the timing of leafout and senescence are critical to plant growth strategies they vary strongly across species \citep{Grime:1977sw}. Within species, populations also vary \citep{aitken2016}, especially because end-of-season events are usually locally adapted %---with populations using unique photoperiods to cue growth cessation depending on the local climate 
+These results suggest fundamental gaps in our understanding of how early-season events and the environment of the growing season shape end-of-season events, but addressing these gaps requires working across plant strategies (e.g., ruderal vs. competitive species) and varying definitions of a growing season. The timing of leafout and senescence are critical components of plant growth strategies they vary strongly across species \citep{Grime:1977sw}. Within species, populations also vary \citep{aitken2016}, especially because end-of-season events are usually locally adapted %---with populations using unique photoperiods to cue growth cessation depending on the local climate 
+
 \citep[e.g. budset][]{bauerle2012photoperiodic,soolanayakanahally2013timing}. Increasing evidence also suggests local climate may define narrow periods of growth for many species, with most significant growth earlier in the growing season \cite{Zohner2023}. These results suggest the calendar growing season (i.e., the number of days between the start and end of the growing season) may be less informative to predicting growth than estimates that directly incorporate environmental conditions \citep{Korner2023}.
 % While small scale pot experiments are better for capturing these plant-level measurements, results to date generally cannot differentiate between different species.
 % Some studies have found that calendar growing seasons have lengthened with climate change \citep{Menzel1999,Liu2010}, but several recent studies have found that earlier leafout is often correlated with earlier end-of-season events \citep{Zani2020,Liu2016,Keenan2015}.
@@ -111,7 +112,7 @@ The thermal growing season---a period of favorable meteorological conditions for
 
 
 % emw6Nov2025 -- we do not report correlations, we use a regression so we need to avoid talking about correlations, unless we want to annoy reviewers.
-Here, we use rarely available plant-level data from three years of a multi-species, multi-population common garden to test how variation in start and end of season events drive shifts in calendar and thermal growing seasons. Our results leverage phenological observations of leafout and growth cessation (budset) at the individual tree-level to understand how growing seasons scale across populations, species and communities, and may thus improve our understanding of ecosystem measures to improve forecasting.  %  and examine which phenological event more strongly influences variation in growing season length. From this, we can understand how start- and end-of-season events together impact the calendar growing season, and how this relates to the thermal growing season, which connects to potential productivity. This study offers insights into physiology that will allow us to scale from ecosystem level observations to individual mechanisms too, and improve forecasting. 
+Here, we use rarely available plant-level data from three years of a multi-species, multi-population common garden to test how variation in start and end of season events drive shifts in calendar and thermal growing seasons. Our results leverage phenological observations of leafout and growth cessation (budset) at the individual tree-level to understand how growing seasons scale across populations, species and communities, and may thus enhance our understanding of ecosystem measures to improve forecasting.  %  and examine which phenological event more strongly influences variation in growing season length. From this, we can understand how start- and end-of-season events together impact the calendar growing season, and how this relates to the thermal growing season, which connects to potential productivity. This study offers insights into physiology that will allow us to scale from ecosystem level observations to individual mechanisms too, and improve forecasting. 
 
 %\section{Results \& Discussion} 
 \iffalse
@@ -134,18 +135,18 @@ early calendar growing seasons led to lower---cooler---thermal growing seasons (
 % emw6Nov2025 -- I cut the below point because I think it is best explained in the figure (and would take more words here to explain)
 % ', and a relatively small advance in calendar time resulting in a proportionately larger gain in thermal sums'
 Differences between thermal and calendar growing seasons were strongest in the earlier-leafout species, which leaf out during the coolest part of the spring (Figure \ref{fig:cool1}-\ref{fig:vapar}). For later leafing species, earlier leafout did not substantially reduce their thermal growing season, bit it also did not increase it---suggesting thermal seasons do not increase with calendar growing seasons for any of our studied species. Species was the a major predictor of variation in leafout and budset% and growing season length 
-($\sigma_{species}$ days for leafout: $8.2, $UI_{90}$[5.6, 11.7], days for budset: 9.8, $UI_{90}$[7, 13.5]).% days for season length: 14.5 $UI_{90}$[10.4,19.7).
+($\sigma_{species}$ days for leafout: $8.1, $UI_{90}$[5.5, 11.6], days for budset: 9.7, $UI_{90}$[7, 13.6]).% days for season length: 14.4 $UI_{90}$[10.3,19.9).
 
 % Our results showed only small differences in the full season, measured across species and populations in calendar days (Figure \ref{fig:vapar}c) ...
 These results suggest that some of the apparently conflicting recent findings of whether longer seasons increase growth or productivity may be due to different scales of observation, including the different species they integrate over. Our result that individual trees appear to accelerate their end of season events with earlier start of season events supports other studies conducted on a small number of species \citep[using alternative metrics of senescence,][]{Liu2016,Zani2020}. Thus, we may expect that studies of individual trees could find little relationship between earlier leafout and growth \citep{cuny2012life,michelot2012comparing,Zani2020}, which could be driven by currently unstudied shifts in the thermal seasons. Additionally, because differences between thermal and calendar growing seasons were species-dependent, previous findings may depend on the species studied \citep{cuny2012life,michelot2012comparing}. This cross-species variation  likely scales up to affect ecosystem-level estimates, which generally have one measure of the start of season---for the earliest leafout species---and one for the end of season, likely capturing the later-leafout species. % given the correlations we found between start and end of season events. % Cut for space: Thus, by integrating across species some studies may find stronger correlations between productivity and earlier seasons. 
 
 % emw6Nov2025 -- avoid 'plastic' here as some would not use the word the way we do ... 
 % emw6Nov2025 -- save words by not naming the sites
-Beyond species-level variation, we found high variation across years in both leafout and budset. We expected large differences across years in leafout ($\sigma_{year}$: 10.6 days, $UI_{90}$[4.8, 21.2], Figure \ref{fig:vapar}b), because it varies strongly with local climatic conditions---one of the reasons it is the most consistent biological indicator of anthropogenic climate change \citep{ipcc2022}. In line with this, we also found little variation across populations in leafout ($\sigma_{population}$: 0.6 days, $UI_{90}$[0, 1.9], Figure \ref{fig:vapar}a). Yet our finding of 15 days of variation across years in budset was surprising (\sigma_{year}$: 15.1 days, $UI_{90}$[6.2, 31], Figure \ref{fig:vapar}b) because budset is generally thought to be strongly locally adapted and controlled by photoperiod, which does not vary year to year \citep{soolanayakanahally2013timing,aitken2016}. %dl15Nov2025: I would specify "local adaptation in budset" just to help the reader stay focused
-We did find evidence of local adaptation ($\sigma_{population}$: 2.4 days, $UI_{90}$[0.4, 6.4], Figure \ref{fig:vapar}a), with populations from the site with the fewest frost free days (FFD, Figure \ref{fig:ffd}) setting buds approximately two days before the site with next fewest FFD. These differences, however, were weak (Figure \ref{fig:vapar}a) and 6X and 4X smaller than the variation due to year and species (respectively). 
+Beyond species-level variation, we found high interannual variation in both leafout and budset. We expected large differences across years in leafout ($\sigma_{year}$: 10.7 days, $UI_{90}$[4.9, 20.9], Figure \ref{fig:vapar}b), because it varies strongly with local climatic conditions---one of the reasons it is the most consistent biological indicator of anthropogenic climate change \citep{ipcc2022}. Similarly, we found little variation across populations in leafout ($\sigma_{population}$: 0.6 days, $UI_{90}$[0, 1.8], Figure \ref{fig:vapar}a). Yet our finding of 15 days of variation across years in budset was surprising (\sigma_{year}$: 15 days, $UI_{90}$[6.4, 30.8], Figure \ref{fig:vapar}b) because budset is generally thought to be strongly locally adapted and controlled by photoperiod, which does not vary year to year \citep{soolanayakanahally2013timing,aitken2016}. %dl15Nov2025: I would specify "local adaptation in budset" just to help the reader stay focused
+We did find evidence of local adaptation ($\sigma_{population}$: 2.3 days, $UI_{90}$[0.4, 6.1], Figure \ref{fig:vapar}a), with populations from the site with the fewest frost free days (FFD, Figure \ref{fig:ffd}) setting buds approximately two days before the site with next fewest FFD. These differences, however, were weak (Figure \ref{fig:vapar}a) and 7X and 4X smaller than the variation due to year and species (respectively). 
 
 % emw6Nov2025 -- CUTREFS: Olsen2014, vico2021
-The shift in budset with earlier leafout suggests a potential pathway to better understand and predict recent findings, given additional research. While most work on budset has stressed the role of photoperiod \citep{soolanayakanahally2013timing}, other studies have found evidence of temperature control \citep{Rohde2011,Michelson2018}. Our results suggest an additional potential role of leafout timing, which could be confounded with temperature. Teasing apart these potential cues while also testing these relationships for other end of season events could help resolve connections between start and end of season events with growth. While we found similar findings using leaf coloring, there are many ways that plants transition from growth to dormancy each year \citep{Michelson2018}---with different implications for carbon gain \citep{Korner2023}.
+The shift in budset with earlier leafout suggests a potential pathway to better understand and predict ecosystem dynamics, given additional research. While most work on budset has stressed the role of photoperiod \citep{soolanayakanahally2013timing}, other studies have found evidence of temperature control \citep{Rohde2011,Michelson2018}. Our results suggest an additional potential role of leafout timing, which could be confounded with temperature. Teasing apart these potential cues while also testing these relationships for other end of season events could help resolve connections between start and end of season events with growth. While we found similar findings using leaf coloring, there are many ways that plants transition from growth to dormancy each year \citep{Michelson2018}---with different implications for carbon gain \citep{Korner2023}.
 
 % Shortened for space
 \iffalse
@@ -206,7 +207,7 @@ Understanding whether thermal responses are consistent across species with diffe
  \includegraphics[width=.6\textwidth]{..//analyses/figures/finalfigure1.png} 
     
   \begin{singlespace}  
-    \caption{The relationship between leafout timing and growing season length differs between the calendar and the thermal growing seasons. Panels (a) and (b) conceptually demonstrate the expected relationships between leafout timing and both calendar and thermal growing seasons under two different expectations, with (a) showing the expectation that longer seasons lead to increased carbon storage, while panel (b) shows the expectation that plant dynamically adjust the end of their growing season such that longer growing seasons do not increase carbon storage. In our study, later leafout resulted in a shorter calendar growing season (median estimated effect: -0.4 days, $UI_{90}[-0.7,-0.2]$) (c) and this pattern was consistent across species in our study (d). In contrast, later leafout resulted in a longer thermal growing season (median estimates effect: 5.4 growing-degree days, $UI_{90}[2.2,8.5]$) (d), an effect that was stronger for species that typically leafout earlier in the season---panels in (d) display in the typical order of leafout among species. The black trend lines represent the median effect of leafout timing on growing season length and shaded region 90\% uncertainty intervals. Points in (c) represent the raw data (per individual tree per year).}
+    \caption{The relationship between leafout timing and growing season length differs between the calendar and the thermal growing seasons. Panels (a) and (b) conceptually demonstrate the expected relationships between leafout timing and both calendar and thermal growing seasons under two different expectations, with (a) showing the expectation that longer seasons lead to increased carbon storage, while panel (b) shows the expectation that plant dynamically adjust the end of their growing season such that longer growing seasons do not increase carbon storage. In our study, later leafout resulted in a shorter calendar growing season (median estimated effect: -0.4 days, $UI_{90}[-0.7,-0.2]$) (c) and this pattern was consistent across species in our study (d). In contrast, later leafout resulted in a longer thermal growing season (median estimates effect: 5.3 growing-degree days, $UI_{90}[2.1,8.4]$) (d), an effect that was stronger for species that typically leafout earlier in the season---panels in (d) display in the typical order of leafout among species. The black trend lines represent the median effect of leafout timing on growing season length and shaded region 90\% uncertainty intervals. Points in (c) represent the raw data (per individual tree per year).}
     \end{singlespace}
     \label{fig:cool1}
 \end{figure}
@@ -218,7 +219,7 @@ Understanding whether thermal responses are consistent across species with diffe
     \centering
  \includegraphics[width=.9\textwidth]{..//analyses/figures/finalfigure2.png}
     \caption{Differences in leafout and budset (in days) due to variation from populations (a) and years (b). Points represent the median effect size estimate, and thick and thin bars the 50\% and 90\% uncertainty intervals, respectively. Panel (c) shows how shifts in leafout and budset generate varying calendar and thermal growing seasons, contrasting two shrub species with similar life-history strategies. 
- For \emph{Aronia melanocarpa}, the earlier individual (light green line) has a 10 day longer growing season (by leafing out 28 days earlier followed by setting bud 18 days earlier) than its the later leafing individual (dark green line) but has a lower (cooler) thermal season because most of its early growth advantage takes place in the thermally unfavorable early spring. In contrast, for \emph{Myrica gale}, both the early (light green) and later (dark green) individual leaf out later in the spring, such that the 11 day longer calendar growing season (from a 15 day leafout  and 4 day earlier budset of the earlier individual) results in slightly warmer thermal season.}
+ For \emph{Aronia melanocarpa}, the earlier individual (dark green line) has a 10 day longer growing season (by leafing out 28 days earlier followed by setting bud 18 days earlier) than its the later leafing individual (light green line) but has a lower (cooler) thermal season because most of its early growth advantage takes place in the thermally unfavorable early spring. In contrast, for \emph{Myrica gale}, both the early (dark green) and later (light green) individual leaf out later in the spring, such that the 11 day longer calendar growing season (from a 15 day leafout  and 4 day earlier budset of the earlier individual) results in slightly warmer thermal season.}
     %dl15Nov2025: I found this next bit a little awkward and suggest the following minor edits:
 %    Despite the fact that the earlier individual (light green line) of \emph{Aronia melanocarpa} leafs out 28 days before the later individual (dark green line) and sets bud only 18 days before it (i.e., it has a 10 day longer calendar growing season), it's thermal growing season is shorter because most of its growth advantage takes place in the unfavorable early spring. In contrast for \emph{Myrica gale} both the early (light green) and later (dark green) individual leaf out later in the spring, as such the 15 day head start and 4 day earlier finish of the earlier individual (creating an 11 day longer calendar growing season) results in a longer thermal growing season.
 
