--- a/docs/supple-concordance.tex
+++ b/docs/supple-concordance.tex
@@ -1,2 +1,1 @@
-\Sconcordance{concordance:supple.tex:supple.Rnw:%
-1 32 1 1 0 94 1}
+\Sconcordance{concordance:supple.tex:supple.Rnw:1 32 1 1 0 94 1}
