--- a/docs/supple.tex
+++ b/docs/supple.tex
@@ -40,7 +40,7 @@
 In 2014-2015, we collected seeds %of 18 species woody plants from multiple parent plants at
 from four field sites in northeastern North America spanning approximately a 3.5^{\circ}$ latitudinal gradient. The four field sites included Harvard Forest (42.55$^{\circ}$N, 72.20$^{\circ}$W), the White Mountains (44.11$^{\circ}$N, 71.40$^{\circ}$W), Second College Grant, (44.79$^{\circ}$N, 71.15$^{\circ}$W), and St. Hippolyte, QC, CAN (45.98$^{\circ}$N, 74.01$^{\circ}$W). We transported all seeds back to the Weld Hill Research Building at the Arnold Arboretum in Boston Massachusetts (42.30$^{\circ}$N, 71.13$^{\circ}$W) where we germinated seeds following standard germination protocols, and grew them to seedling stages in the research greenhouse. In the spring of 2017 we out-planted seedlings to establish the garden. %Plantings were randomized between 16 plot blocks. Individuals that were too small to survive outside were maintained in the growth facilities for an additional year and out-planted in the early spring of 2018. Plots were divided between tree plots which included species  \textit{Acer pensylvanicum}, \textit{Amelanchier canadensis}, \textit{Alnus incana}, \textit{Betula papyrifera}, \textit{Betula populifolia}, \textit{Beluta alleghaniensis}, \textit{Quercus alba}, and \textit{Quercus rubra} and shrub plots which included the remaining species and shade cloth (Table \ref{listSp}). %dlAug21: I would just refer to the table rather than list all the tree species
 
-Plots were regularly weeded and watered throughout the duration of the study and were pruned in the fall of 2020. Survival of \textit{Acer spicatum}, \textit{Acer pensylvanicum}, \emph{Vaccinium myrtilloides}, \textit{Quercus alba}, and \textit{Quercus rubra} was limited and these species are therefore not included in the following analyses. Based on survivorship in the common garden, our subsequent analyses included an average of 14 individuals per species. Our statistical analyses account for the unbalanced design that is frequently occurs in common gardens and other provenance trials (CITE).
+Plots were regularly weeded and watered throughout the duration of the study and were pruned in the fall of 2020. Survival of \textit{Acer spicatum}, \textit{Acer pensylvanicum}, \emph{Vaccinium myrtilloides}, \textit{Quercus alba}, and \textit{Quercus rubra} was limited and these species are therefore not included in the following analyses. Based on survivorship in the common garden, our subsequent analyses included an average of 14 individuals per species. Our statistical analyses account for the unbalanced design that is frequently occurs in common gardens and other provenance trials.
 
 \subsubsection*{Phenological monitoring:}
 For the years of 2018-2019, we made phenological observations of all individuals in the common garden twice per week from February to December. In 2020 due to the COVID 19 pandemic, we monitored once per week from March to November. We describe phenological stages using a modified BBCH scale \citep{Finn2007} a common metrics for quantify woody plant phenological progression. We observed all major vegetative stages (budburst BBCH 07, leafout BBCH 15, end of leaf expansion BBCH 19, leaf coloration/drop BBCH 97, reproductive phases flowering BBCH 60-65, fruiting BBCH 72-79 and fruit/cones fully ripe BBCH 89). We added additional phases for budset and labelled full budset as BBCH 102. 
