--- a/docs/NCC_coverLetter.Rnw
+++ b/docs/NCC_coverLetter.Rnw
@@ -47,9 +47,9 @@
 % emw: I like the below but am cutting it as it's repetitive; we could alternative cut the second to last paragraph. 
 % We show that longer growing seasons in calendar days lead to shorter thermal growing seasons. These results help explain some of the contrasting results of how climate change affects growing season length and productivity, and challenge current dogma on the drivers of growth cessation in woody plant with implications for how climate change may alter plant growth and carbon storage. 
 
-\noindent Most models of carbon storage assume that earlier growth will result in longer seasons and increase terrestrial carbon sequestration, yet recent findings have challenged this pivotal assumption \citep{dow2022warm,silvestro2023longer}. New work has suggested that woody plants may dynamically adjust the end of their growing season based on their carbon-sink capacity \citep{Zani2020,Zohner2023}, but these findings come from single species experiments on juvenile trees and could easily be explained by common artifacts \citep[i.e., `pot' effects,][]{norby2021comment}. Further, they assume that variation in the calendar growing season (number of days) should be independent of variation in the thermal growing season \citep[i.e., the period of favorable meteorological conditions for plant growth,][]{Korner2023}. This, however, has not been tested given the paucity of start and end of season phenological events for adult trees. 
+\noindent Most models of carbon storage assume that earlier growth will result in longer seasons and increase terrestrial carbon sequestration, yet recent findings have challenged this pivotal assumption \citep{dow2022warm,silvestro2023longer}. New work has suggested that woody plants may dynamically adjust the end of their growing season based on their carbon-sink capacity \citep{Zani2020,Zohner2023}, but these findings come from single species experiments on juvenile trees and could easily be explained by common artifacts \citep[i.e., `pot' effects,][]{norby2021comment}. These studies indicate that variation in the calendar growing season (number of days) should be independent of variation in the thermal growing season \citep[i.e., the period of favorable meteorological conditions for plant growth,][]{Korner2023}. This, however, has not been tested given the paucity of start and end of season phenological events for adult trees. 
 
-\noindent Here we report on new data from a multi-species, multi-population common garden that shows longer calendar growing seasons lead to shorter (i.e., cooler) thermal growing seasons. We found that earlier leafout leads to earlier growth cessation (budset, similar results found with leaf colouring), causing longer calendar growing seasons to actually be shorter (cooler) thermal growing seasons. Because thermal conditions in the early spring are far less optimal than later-season conditions, we show that the thermal time gained by early leafout was not offset by the thermal time lost by earlier budset. Our results are based on rarely available plant-scale phenological measurements from three years across 13 woody species, all native and co-occurring in Eastern United States forests, and sampled from four populations spanning 3.5\degree  latitude. 
+\noindent Here we report on new data from a multi-species, multi-population common garden that shows longer calendar growing seasons lead to shorter (i.e., cooler) thermal growing seasons. We found that earlier leafout leads to earlier growth cessation (budset, similar results found with leaf colouring), causing longer calendar growing seasons to actually be shorter (cooler) thermal growing seasons. Because thermal conditions in the early spring are far less optimal than later-season conditions, we show that the thermal time gained by early leafout was not offset by the thermal time lost by earlier budset. Our results are based on rarely available plant-scale phenological measurements from three years across 13 woody species, all native and co-occurring in Eastern United States forests, and sampled from four populations spanning 3.5^{\circ}$ latitude. 
 
 \noindent Our findings offer a mechanistic explanation for why multiple studies have failed to find correlations between longer calendar seasons and increased plant growth \citep{dow2022warm,silvestro2023longer}, and questions previous assertions of sink-source control in experiments \citep{Zani2020,norby2021comment,Zohner2023}. At the same time, our results challenge the decades-old dogma that growth cessation is locally adapted and driven mainly by photoperiod, as we show that variation is driven far more by annual differences compared to population effects. 
 
