working on some tweaks to resubmit

--- a/docs/supple.Rnw
+++ b/docs/supple.Rnw
@@ -103,8 +103,15 @@ Species & functional group & $n$ \\
 
  \begin{figure}[h!]
     \centering
+ \includegraphics[width=.8\textwidth]{..//analyses/figures/snew2.pdf}
+    \caption{Difference in leafout and butset partitioned between populations (a) and years (b). Points represent the median effect size estimate, and thick and thin bars the 50\% and 90\% uncertainty intervals.}
+    \label{fig:mus}
+\end{figure}
+
+ \begin{figure}[h!]
+    \centering
  \includegraphics[width=.8\textwidth]{..//analyses/figures/sup2.pdf}
-    \caption{Difference in leafout, leaf coloration and growing season length partitioned between populations (a) and years (b). Points represent the median effect size estimate, and thick and thin bars the 50\% and 90\% uncertainty intervals.}
+    \caption{Difference in leafout and leaf coloration partitioned between populations (a) and years (b). Points represent the median effect size estimate, and thick and thin bars the 50\% and 90\% uncertainty intervals.}
     \label{fig:alta}
 \end{figure}
 
