--- a/docs/phen_framing.Rnw
+++ b/docs/phen_framing.Rnw
@@ -222,8 +222,8 @@ Here, using rarely available plant-level phenology from a common garden of 13 wo
 % This relationship was in part explained by positive correlations between leafout and budset where later leafing individuals also set buds later, extending their growth into that later part of the season when thermal conditions were more favorable. 
 \clearpage
 %\section{Introduction}
-Terrestrial forests are a major mitigation pathway for climate change, sequestering 20\% of greenhouse gas emissions   \citep{roe2021}. Most models of climate change assume warming will drive longer seasons, more tree growth and, thus, more carbon storage (Figure \ref{fig:cool1}a), following decades of evidence from ecosystem-scale studies \citep{White1999,Keenan2014}. 
-However, recent findings from  observations of individual trees have questioned this assumption \citep{dow2022warm,silvestro2023longer}. At the same time new experiments on saplings have suggested that plants may adjust their end of season timing dynamically such that longer seasons do not increase total productivity (Figure \ref{fig:cool1}b), though the mechanism---and prevalence---of this effect is unclear \citep{Zani2020,Norby2021,Zohner2023}.
+Terrestrial forests are a major mitigation pathway for climate change, sequestering 20\% of greenhouse gas emissions   \citep{roe2021}. Most models of climate change assume warming will drive longer seasons, more tree growth and, thus, more carbon storage ( \ref{fig:cool1}a), following decades of evidence from ecosystem-scale studies \citep{White1999,Keenan2014}. 
+However, recent findings from  observations of individual trees have questioned this assumption \citep{dow2022warm,silvestro2023longer}. At the same time new experiments on saplings have suggested that plants may adjust their end of season timing dynamically such that longer seasons do not increase total productivity ( \ref{fig:cool1}b), though the mechanism---and prevalence---of this effect is unclear \citep{Zani2020,Norby2021,Zohner2023}.
 % CUTREFS: You only need one of {shanley2024, roe2021} and 1-2 of {Churkina2005,White1999,Keenan2014} ... I cut some. 
 % CUTREFS: camarero2022decoupled
 
@@ -255,11 +255,11 @@ Here, we use rarely available plant-level data from three years of a multi-speci
 
 % emw6Nov2025 -- we don't have inference at 2 decimal places, can you change throughout to 1 decimal place?
 % dl15Nov2025 you say 18 spp in the abstract
-Across three years and 13 co-occurring species (Tab: \ref{listSp}) collected from four populations across a 3.5^{\circ}$ latitudinal gradient (Figure \ref{fig:map}), our common garden (located in Boston, Massachusetts) captured high variation in the timing of both start (leafout) and end of season (budset) events  (Figure \ref{fig:vapar}a,b). Resulting calendar and thermal growing seasons varied almost two-fold across individual trees (2.1x and 1.8x respectively), with earlier leafout leading to longer calendar growing seasons (Figure \ref{fig:cool1}c,d), as routinely seen with anthropogenic climate change \citep{Menzel1999,Liu2010}. 
+Across three years and 13 co-occurring species (Tab: \ref{listSp}) collected from four populations across a 3.5^{\circ}$ latitudinal gradient (Figure \ref{fig:map}), our common garden (located in Boston, Massachusetts) captured high variation in the timing of both start (leafout) and end of season (budset) events  (Figure \ref{fig:mus}). Resulting calendar and thermal growing seasons varied almost two-fold across individual trees (2.1x and 1.8x respectively), with earlier leafout leading to longer calendar growing seasons (Figure \ref{fig:cool1}c,d), as routinely seen with anthropogenic climate change \citep{Menzel1999,Liu2010}. 
 
 % emw6Nov2025 -- Can you add a fig ref for 'This result was driven by an apparent relationship between leafout and budset at the individual level (FIG)'?
 Longer calendar growing seasons did not lead to higher thermal growing seasons, as generally assumed; instead
-early calendar growing seasons led to lower---cooler---thermal growing seasons (Figure \ref{fig:cool1}c,d, this and other results were similar when we determined the growing season length with leaf coloration instead of budset, Figure \ref{fig:leafrel}). This was driven by a relationship between leafout and budset at the individual level combined with differences in thermal conditions of the early season during leafout and later in the season during budset. When plants leafed out earlier in the spring they stopped growth (budset) earlier, but the additional days of growth in the spring---when temperatures were cool---were rarely offset thermally by the days lost in the later season to earlier budset, which occurred in warmer months (July-August, Figure \ref{fig:vapar}c). 
+early calendar growing seasons led to lower---cooler---thermal growing seasons (Figure \ref{fig:cool1}c,d, this and other results were similar when we determined the growing season length with leaf coloration instead of budset, Figure \ref{fig:leafrel}). This was driven by a relationship between leafout and budset at the individual level combined with differences in thermal conditions of the early season during leafout and later in the season during budset. When plants leafed out earlier in the spring they stopped growth (budset) earlier, but the additional days of growth in the spring---when temperatures were cool---were rarely offset thermally by the days lost in the later season to earlier budset, which occurred in warmer months (July-August, Figure \ref{fig:vapar}). 
 
 % emw6Nov2025 -- I cut the below point because I think it is best explained in the figure (and would take more words here to explain)
 % ', and a relatively small advance in calendar time resulting in a proportionately larger gain in thermal sums'
@@ -346,8 +346,8 @@ Understanding whether thermal responses are consistent across species with diffe
 %dl15Nov2025 I think this legend also needs to be larger in the top panel, also is it possible to move the bottom label in pancel c to be to the right of the green line and not overlapping the y-axis?
 \begin{figure}[h!]
     \centering
- \includegraphics[width=.9\textwidth]{..//analyses/figures/finalfigure2.png}
-    \caption{Differences in leafout and budset (in days) due to variation from populations (a) and years (b). Points represent the median effect size estimate, and thick and thin bars the 50\% and 90\% uncertainty intervals, respectively. Panel (c) shows how shifts in leafout and budset generate varying calendar and thermal growing seasons, contrasting two shrub species with similar life-history strategies. 
+ \includegraphics[width=.9\textwidth]{..//analyses/figures/Fig2.png}
+    \caption{%Differences in leafout and budset (in days) due to variation from populations (a) and years (b). Points represent the median effect size estimate, and thick and thin bars the 50\% and 90\% uncertainty intervals, respectively. Panel (c) shows how shifts in leafout and budset generate varying calendar and thermal growing seasons, contrasting two shrub species with similar life-history strategies. 
  For \emph{Aronia melanocarpa}, the earlier individual (dark green line) has a 10 day longer growing season (by leafing out 28 days earlier followed by setting bud 18 days earlier) than its the later leafing individual (light green line) but has a lower (cooler) thermal season because most of its early growth advantage takes place in the thermally unfavorable early spring. In contrast, for \emph{Myrica gale}, both the early (dark green) and later (light green) individual leaf out later in the spring, such that the 11 day longer calendar growing season (from a 15 day leafout  and 4 day earlier budset of the earlier individual) results in slightly warmer thermal season.}
     %dl15Nov2025: I found this next bit a little awkward and suggest the following minor edits:
 %    Despite the fact that the earlier individual (light green line) of \emph{Aronia melanocarpa} leafs out 28 days before the later individual (dark green line) and sets bud only 18 days before it (i.e., it has a 10 day longer calendar growing season), it's thermal growing season is shorter because most of its growth advantage takes place in the unfavorable early spring. In contrast for \emph{Myrica gale} both the early (light green) and later (dark green) individual leaf out later in the spring, as such the 15 day head start and 4 day earlier finish of the earlier individual (creating an 11 day longer calendar growing season) results in a longer thermal growing season.
